[gd_scene load_steps=12 format=3 uid="uid://6t4cvv7wppet"]

[ext_resource type="Script" path="res://main_scene.gd" id="1_t8jow"]
[ext_resource type="Script" path="res://wall.gd" id="2_1gw6m"]
[ext_resource type="Script" path="res://ceilling_floor.gd" id="3_tobov"]
[ext_resource type="FontFile" uid="uid://becs64bcpr5hm" path="res://MEIRYO.TTC" id="4_naqff"]
[ext_resource type="Script" path="res://label.gd" id="4_ncihh"]
[ext_resource type="Script" path="res://Label2.gd" id="6_e1uqm"]

[sub_resource type="CanvasTexture" id="CanvasTexture_4n55y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o6ov5"]
size = Vector2(10, 580)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmcjf"]
size = Vector2(580, 10)

[sub_resource type="LabelSettings" id="LabelSettings_7bdyt"]
line_spacing = 0.0
font = ExtResource("4_naqff")
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_ebtms"]
line_spacing = 0.0
font = ExtResource("4_naqff")
font_size = 64

[node name="MainScene" type="Node2D"]
script = ExtResource("1_t8jow")

[node name="Background" type="ColorRect" parent="."]
offset_right = 600.0
offset_bottom = 800.0
color = Color(0, 0, 0, 1)

[node name="PlayAreaBackground" type="ColorRect" parent="."]
offset_left = 10.0
offset_top = 110.0
offset_right = 590.0
offset_bottom = 690.0
color = Color(0.529067, 0.529067, 0.529067, 1)

[node name="LeftWall" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
script = ExtResource("2_1gw6m")

[node name="Sprite2D" type="Sprite2D" parent="LeftWall"]
texture = SubResource("CanvasTexture_4n55y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(5, 400)
shape = SubResource("RectangleShape2D_o6ov5")

[node name="RightWall" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
script = ExtResource("2_1gw6m")

[node name="Sprite2D" type="Sprite2D" parent="RightWall"]
texture = SubResource("CanvasTexture_4n55y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(594, 400)
shape = SubResource("RectangleShape2D_o6ov5")

[node name="Floor" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
script = ExtResource("3_tobov")

[node name="Sprite2D" type="Sprite2D" parent="Floor"]
texture = SubResource("CanvasTexture_4n55y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(300, 695)
shape = SubResource("RectangleShape2D_wmcjf")

[node name="Ceilling" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 7
script = ExtResource("3_tobov")

[node name="Sprite2D" type="Sprite2D" parent="Ceilling"]
texture = SubResource("CanvasTexture_4n55y")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceilling"]
position = Vector2(300, 105)
shape = SubResource("RectangleShape2D_wmcjf")

[node name="RockSpawnPos" type="Node2D" parent="."]
position = Vector2(52, 146)

[node name="PaperSpawnPos" type="Node2D" parent="."]
position = Vector2(554, 146)

[node name="ScissorSpawnPos" type="Node2D" parent="."]
position = Vector2(300, 650)

[node name="Label" type="Label" parent="."]
offset_left = 1.0
offset_top = 19.0
offset_right = 601.0
offset_bottom = 83.0
label_settings = SubResource("LabelSettings_7bdyt")
script = ExtResource("4_ncihh")

[node name="Rocks" type="Node2D" parent="."]

[node name="Papers" type="Node2D" parent="."]

[node name="Scissors" type="Node2D" parent="."]

[node name="Label2" type="Label" parent="."]
offset_left = 183.0
offset_top = 702.0
offset_right = 385.0
offset_bottom = 800.0
label_settings = SubResource("LabelSettings_ebtms")
script = ExtResource("6_e1uqm")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="area_entered" from="Ceilling" to="Ceilling" method="_on_area_entered"]
